# ChangeLog for media-gfx/povray
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.95 2008/11/15 19:11:27 lavajoe Exp $

  15 Nov 2008; Joe Peterson <lavajoe@gentoo.org> -povray-3.6.1-r3.ebuild:
  Remove old

  15 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  povray-3.6.1-r4.ebuild:
  ppc stable, bug #245981

  15 Nov 2008; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r4.ebuild:
  alpha/ia64 stable wrt #245981

  15 Nov 2008; Joe Peterson <lavajoe@gentoo.org> -povray-3.6.1-r2.ebuild:
  Remove old

  15 Nov 2008; Markus Meier <maekke@gentoo.org> povray-3.6.1-r4.ebuild:
  amd64/x86 stable, bug #245981

  14 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  povray-3.7.0_beta29-r1.ebuild:
  Fix FEATURES="test" functionality in beta releases (bug #246645)

  12 Nov 2008; Markus Rothe <corsair@gentoo.org> povray-3.6.1-r4.ebuild:
  Stable on ppc64; bug #153538

  11 Nov 2008; Jeroen Roovers <jer@gentoo.org> povray-3.6.1-r4.ebuild:
  Stable for HPPA (bug #153538).

  11 Nov 2008; Ferris McCormick <fmccor@gentoo.org> povray-3.6.1-r4.ebuild:
  Sparc stable --- Security Bug #153538 --- neat test and uses system libpng.

  10 Nov 2008; Jeroen Roovers <jer@gentoo.org> povray-3.6.1-r3.ebuild:
  Stable for HPPA (bug #245981).

  09 Nov 2008; Raúl Porcel <armin76@gentoo.org> povray-3.6.1-r3.ebuild:
  alpha/ia64/sparc stable wrt #245981

  09 Nov 2008; Markus Meier <maekke@gentoo.org> povray-3.6.1-r3.ebuild:
  amd64/x86 stable, bug #245981

  08 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  -povray-3.7.0_beta29.ebuild:
  Remove old

*povray-3.7.0_beta29-r1 (08 Nov 2008)

  08 Nov 2008; Joe Peterson <lavajoe@gentoo.org>
  +files/povray-3.7.0-print-extend-expiration-info.patch,
  +povray-3.7.0_beta29-r1.ebuild:
  Print info on how to extend the expiration date of the beta if it has
  expired. Without this, users can get the impression that the program
  cannot be run.
