@@ -1,10 +1,10 @@
 AUX povray-3.6.1-configure.patch 1081 RMD160 92dd3995691d567f6ae24b38bea1f31b9803b5b3 SHA1 c4c9fe03b8e24b8c03ed93abd484cfff3abd8dfc SHA256 a3278c6e43c30daa5a2edb7de3726e57f732f9c387b2d838cb41f3c7f14f773b
 AUX povray-3.6.1-find-egrep.patch 2463 RMD160 6af6c01daec1a0eb5ae27f65ede5411c4af2dbe2 SHA1 19537ff628130a4d2b048529e5a4f9bbfe79840c SHA256 1f56d1223954c1d0ed160b034badcf0878813b0bf984221c8eadce5d7666a46e
 AUX povray-3.6.1-use-system-libpng.patch 1922 RMD160 dd5481f9ff81f06c596dc0a19386e5ca01f4ad57 SHA1 98333f7701ffd1803adc9b04d5d09beff2f34c27 SHA256 efb0d8345d8409d6c92d024b0b1621bea88f460d73ad9d00b4b670e1ae6b127f
-AUX povray-3.7.0-print-extend-expiration-info.patch 1179 RMD160 8dad1af951d062c06a14ffe3b68fc17f1fda4fa7 SHA1 c2d8ca630a3f0b479c7f85728549455059e05ff3 SHA256 3f787d0d96b1d193c70d6a6684f84b31618e25b768dccb0fb114b832da023df9
+AUX povray-3.7.0_beta29-print-extend-expiration-info.patch 1179 RMD160 8dad1af951d062c06a14ffe3b68fc17f1fda4fa7 SHA1 c2d8ca630a3f0b479c7f85728549455059e05ff3 SHA256 3f787d0d96b1d193c70d6a6684f84b31618e25b768dccb0fb114b832da023df9
 DIST povray-3.6.1.tar.bz2 8200160 RMD160 84ba679da66089f192cc1bfcf8bdd498e736a9a3 SHA1 1fab3ccbdedafbf77e3a66087709bbdf60bc643d SHA256 4e8a7fecd44807343b6867e1f2440aa0e09613d6d69a7385ac48f4e5e7737a73
 DIST povray-src-3.7.0.beta.29.tar.bz2 6202387 RMD160 5073463b1068fc95a31f77da6458286888eccff8 SHA1 4c7a4c22472d3b9a2d88e660a6df6c3b3d497efb SHA256 88655167a4ae0ba97a7e1e19c261d592692bbbdc7f77d287c0b3d084334b45b3
 EBUILD povray-3.6.1-r4.ebuild 2740 RMD160 49947c21b48379364d98711f032a9c949c9e603b SHA1 2e90864be295876c14646c08b79f158956e52e49 SHA256 96176df1d8fcd2fbebe5dc6c9cf22cb4c7e1a848f8142dae20fdd0a8f6352d00
-EBUILD povray-3.7.0_beta29-r1.ebuild 4075 RMD160 0df62e02ccfab3d7e27358614ba95d8f152839cb SHA1 da95b9a2be0b2b0ca8dfc4d46090415e3c896dbd SHA256 93994b4c81dffc21ccf8921704d4192c598376495ce15756a7c4be83e75d1adb
-MISC ChangeLog 13790 RMD160 f6e122f76d5506d71e627d284b0e1d99e489f382 SHA1 5f3ed001869a892cb940d22f0d176fd4dd33cdaa SHA256 1a9c1a9a0e466dcab244a5912da92fbe037ad9d6868c3ba0f0a0eea6b77bfd31
+EBUILD povray-3.7.0_beta29-r1.ebuild 4117 RMD160 2f3551b2db501c041605b523b93745f496175b39 SHA1 51847ddc47593624018d8325bef92d6eceee3cb1 SHA256 a4062fe012f7b9bced1afcc6e204b264a9f312d7a29ce3320b395ca959a27c18
+MISC ChangeLog 14043 RMD160 9ab18c0a6d4dbb3d8778aac49d744d15f72cb6d6 SHA1 af30472bccec08dc9a6e2472af9211010f79dcca SHA256 fbb98614aa285516eb3492fd35841a018a02f6136fbcd7bb61878d67d4a053ae
 MISC metadata.xml 223 RMD160 0c9c59654305e8789fe6c93fd07c561cfe003f54 SHA1 7904e6fb45104baf2cb67fb9886c633af4dc7056 SHA256 a24b49fe5448d4cb329acf1d8113ac30eb1d61d63a7319b66c077d3f1775d055
